--- a/webserver/package.json
+++ b/webserver/package.json
@@ -3,8 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node app"
+    "start": "node server.js"
   },
   "dependencies": {
+    "express": "^4.0.0"
   }
 }
