--- a/webserver/package.json
+++ b/webserver/package.json
@@ -6,6 +6,7 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.0.0"
+    "express": "^4.0.0",
+    "socket.io": "^0.9.16"
   }
 }
