Add template config file. Make sure to have a development.js file when developing

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,10 @@
 
 # /webserver/
 
+# /webserver/config
+/webserver/config/development.js
+/webserver/config/production.js
+
 # /webserver/node_modules
 /webserver/node_modules
 
