Use the bootstrap framework

--- a/webserver/bower.json
+++ b/webserver/bower.json
@@ -17,6 +17,7 @@
   "dependencies": {
       "d3": null,
       "socket.io": null,
-      "jquery": null
+      "jquery": null,
+      "bootstrap": null
   }
 }
