--- a/webserver/package.json
+++ b/webserver/package.json
@@ -8,5 +8,8 @@
   "dependencies": {
     "express": "^4.0.0",
     "socket.io": "^0.9.16"
+  },
+  "devDependencies": {
+    "async": "~0.7.0"
   }
 }
